spec/e2e/type/object.lit
type Foo {}

let foo = Foo();
foo(); # error: [line 4] Runtime error: Can only call functions and types.
